src/test/rustdoc-ui/error-in-impl-trait/impl-keyword-closure.stderr
error[E0433]: failed to resolve: could not resolve path `error::_in::impl_trait::alias::nested::closure`
  --> $DIR/impl-keyword-closure.rs:4:9
   |
LL |     (|| error::_in::impl_trait::alias::nested::closure())()
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ could not resolve path `error::_in::impl_trait::alias::nested::closure`
   |
   = note: this error was originally ignored because you are running `rustdoc`
   = note: try running again with `rustc` or `cargo check` and you may get a more detailed error

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
